--- a/app/src/main/res/layout/daily_view_frag.xml
+++ b/app/src/main/res/layout/daily_view_frag.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,8 +46,8 @@
                 android:id="@+id/textView8"
                 android:layout_width="92dp"
                 android:layout_height="0dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="4dp"
+                android:layout_marginBottom="8dp"
                 android:text="Antal ml"
                 android:textSize="18sp"
                 android:textStyle="bold"
