--- a/app/src/main/res/layout/weekly_view_frag.xml
+++ b/app/src/main/res/layout/weekly_view_frag.xml
@@ -33,8 +33,7 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <android.support.constraint.ConstraintLayout
@@ -45,8 +44,8 @@
                 android:id="@+id/textView12"
                 android:layout_width="62dp"
                 android:layout_height="36dp"
-                android:layout_marginEnd="116dp"
                 android:layout_marginStart="30dp"
+                android:layout_marginEnd="116dp"
                 android:text=" Dato"
                 android:textAlignment="viewStart"
                 android:textSize="18sp"
