--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -127,5 +127,22 @@
         android:id="@+id/reg_weight_frag"
         android:name="com.measurelet.Reg_weight_frag"
         android:label="reg_weight_frag"
-        tools:layout="@layout/reg_weight_frag" /><action android:id="@+id/action_global_reg_weight_frag" app:destination="@id/reg_weight_frag" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popUpTo="@id/dashboard_frag" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+        tools:layout="@layout/reg_weight_frag" /><action android:id="@+id/action_global_reg_weight_frag" app:destination="@id/reg_weight_frag" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popUpTo="@id/dashboard_frag" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/><action android:id="@+id/action_week_to_daily_view_frag" app:destination="@id/daily_view_frag" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popUpTo="@id/weekly_view_frag" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+    <fragment
+        android:id="@+id/introSlidePager"
+        android:name="com.measurelet.registration.IntroSlidePager"
+        android:label="fragment_intro_slide_pager"
+        tools:layout="@layout/fragment_intro_slide_pager" />
+    <action android:id="@+id/action_global_introSlidePager" app:destination="@id/introSlidePager" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    <fragment
+        android:id="@+id/termsFragment"
+        android:name="com.measurelet.registration.TermsFragment"
+        android:label="fragment_terms"
+        tools:layout="@layout/fragment_terms" />
+    <action android:id="@+id/action_global_termsFragment" app:destination="@id/termsFragment" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popUpTo="@id/introSlidePager" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="com.measurelet.registration.SignupFragment"
+        android:label="fragment_signup"
+        tools:layout="@layout/fragment_signup" /><action android:id="@+id/action_global_signupFragment" app:destination="@id/signupFragment" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popUpTo="@id/termsFragment" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/><action android:id="@+id/action_global_dashboard_frag" app:destination="@id/dashboard_frag" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popUpTo="@id/dashboard_frag" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
 </navigation>
