Navigation, mindre fix, Menu Icon

--- a/app/src/main/res/layout/reg_weight_frag.xml
+++ b/app/src/main/res/layout/reg_weight_frag.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="8dp"
         android:text="@string/registrerOverskrift"
         android:textColor="@color/black"
-         android:autoSizeTextType="uniform"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toStartOf="@+id/guideline12"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +32,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/ripple"
-        android:padding="5dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text="Registrér"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toStartOf="@+id/guideline16"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
@@ -50,6 +51,7 @@
         android:layout_marginBottom="8dp"
         android:autoSizeTextType="uniform"
         android:ems="10"
+        android:maxLength="3"
         android:inputType="numberDecimal"
         android:selectAllOnFocus="true"
         android:singleLine="true"
